--- a/decl-your-lang/body.tex
+++ b/decl-your-lang/body.tex
@@ -1,8 +1,10 @@
+\newcommand{\Version}{0.3}
+
 \title{Declare Your Language}
 	
-\author{Eelco Visser\\[20pt]TU Delft}
+\author{Eelco Visser\\[20pt]TU Delft\\[20pt]}
 	
-\date{June 12, 2015 -- \today}
+\date{Version \Version \\\ \\June 12, 2015 -- \today}
 	
 \input{frontmatter}
 
