starting transformation chapter

--- a/decl-your-lang/body.tex
+++ b/decl-your-lang/body.tex
@@ -13,6 +13,7 @@
 \input{getting-spoofax/getting-spoofax}
 \input{tests/tests}
 \input{syntax/syntax}
+\input{transformation/transformation}
 %\input{names/names}
 %\input{semantics/semantics}
 %\input{extension/extension}
