--- a/decl-your-lang/transformation/transformation.tex
+++ b/decl-your-lang/transformation/transformation.tex
@@ -1,6 +1,26 @@
 \chapter{Transformation}
 \chapterlabel{transformation}
 
+\section{Terms and Signatures}
+
+we've already seen those in the syntax chapter
+
+\section{Rewrite Rules}
+
+
+\section{Strategies}
+
+
+\section{String Templates}
+
+
+\section{Spoofax Builders}
+
+
+
+
+
+
 \section{Further Reading}
 
 \cite{VisserBT98}: first definition of Stratego
