term transformations, term rewrite rules, pattern matching

--- a/decl-your-lang/bibliography.bib
+++ b/decl-your-lang/bibliography.bib
@@ -1,5 +1,23 @@
 Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/metaborg-book
 
+@inproceedings{BrandDHJJKKMOSVVV01,
+  title = {The {ASF+SDF} Meta-environment: A Component-Based Language Development Environment},
+  author = {Mark G. J. van den Brand and Arie  van Deursen and Jan Heering and H. A. de Jong and Merijn de Jonge and Tobias Kuipers and Paul  Klint and Leon Moonen and Pieter A. Olivier and Jeroen Scheerder and Jurgen J.  Vinju and Eelco Visser and Joost Visser},
+  year = {2001},
+  doi = {http://link.springer.de/link/service/series/0558/bibs/2027/20270365.htm},
+  tags = {programming languages, rule-based, meta programming, SDF, meta-model, architecture, model-driven development, source-to-source, DSL, metaprogramming, Meta-Environment, Cobol, ASF+SDF, open-source, meta-objects},
+  researchr = {http://researchr.org/publication/BrandDHJJKKMOSVVV01},
+  cites = {0},
+  citedby = {3},
+  pages = {365-370},
+  booktitle = {Compiler Construction, 10th International Conference, CC 2001 Held as Part of the Joint European Conferences on Theory and Practice of Software, ETAPS 2001 Genova, Italy, April 2-6, 2001, Proceedings},
+  editor = {Reinhard Wilhelm},
+  volume = {2027},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {3-540-41861-X},
+}
+
 @inproceedings{BrandSVV02,
   title = {Disambiguation Filters for Scannerless Generalized {LR} Parsers},
   author = {Mark G. J. van den Brand and Jeroen Scheerder and Jurgen J.  Vinju and Eelco Visser},
@@ -168,6 +186,21 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   series = {Lecture Notes in Computer Science},
   publisher = {Springer},
   isbn = {978-3-662-46668-1},
+}
+
+@article{Klint93,
+  title = {A Meta-Environment for Generating Programming Environments},
+  author = {Paul  Klint},
+  year = {1993},
+  doi = {http://doi.acm.org/10.1145/151257.151260},
+  tags = {programming languages, rule-based, translation, syntax definition, meta programming, SDF, meta-model, functional programming, design research, language design, model-driven development, programming, Meta-Environment, incremental, design, ASF+SDF, meta-objects},
+  researchr = {http://researchr.org/publication/Klint93},
+  cites = {33},
+  citedby = {40},
+  journal = {ACM Transactions on Software Engineering Methodology},
+  volume = {2},
+  number = {2},
+  pages = {176-201},
 }
 
 @article{HemelGKV11,
@@ -580,6 +613,21 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   series = {Lecture Notes in Computer Science},
   publisher = {Springer},
   isbn = {3-540-22119-0},
+}
+
+@article{JongeVV01,
+  title = {{XT}: a bundle of program transformation tools},
+  author = {Merijn de Jonge and Eelco Visser and Joost Visser},
+  year = {2001},
+  doi = {http://dx.doi.org/10.1016/S1571-0661(04)80921-6},
+  tags = {model-to-model transformation, rule-based, Stratego/XT, model-driven development, source-to-source, transformation system, model transformation, programming, open-source, transformation, Stratego, program transformation},
+  researchr = {http://researchr.org/publication/JongeVV01},
+  cites = {0},
+  citedby = {0},
+  journal = {Electronic Notes in Theoretical Computer Science},
+  volume = {44},
+  number = {2},
+  pages = {79-86},
 }
 
 @inproceedings{BravenboerV04,
