--- a/decl-your-lang/commands/languages/Stratego.tex
+++ b/decl-your-lang/commands/languages/Stratego.tex
@@ -1,8 +1,8 @@
 \lstdefinelanguage{Stratego}{
-	morekeywords=[1]{all, bagof, constructors, end, extend, fail, id, imports, in, let, module, not, one, overlays, override, prim, rec, rules, script, signature, some, sorts, strategies, stratego, test, thread, where, with, if, then, else, switch, case, otherwise, depends, on},
-	alsoletter={-},
-	otherkeywords={<+,+>,?.!,*},
-	morestring=[b]",
+	morekeywords=[1]{all, bagof, constructors, end, extend, fail, id, imports, in,
+	let, module, not, one, overlays, override, prim, rec, rules, script, signature,
+	some, sorts, rules, strategies, stratego, test, thread, where, with, if, then,
+	else, switch, case, otherwise, depends, on}, alsoletter={-}, otherkeywords={<+,+>,?.!,*}, morestring=[b]",
 	morecomment=[l]{//},
 	morecomment=[n]{(*}{*)},
 	morecomment=[n]{/*}{*/},
