--- a/decl-your-lang/commands/languages/paplj.tex
+++ b/decl-your-lang/commands/languages/paplj.tex
@@ -1,5 +1,5 @@
 \lstdefinelanguage{paplj} {
-	morekeywords={program, run, class, this, Num, Bool},
+	morekeywords={program, run, class, this, Num, Bool, let, in},
 	otherkeywords={},
 	morecomment=[l]{\%\%},
 	sensitive=true,
