Figure not Fig.

--- a/decl-your-lang/commands/labels.tex
+++ b/decl-your-lang/commands/labels.tex
@@ -15,7 +15,7 @@
 \newcommand{\Chapter}[1]{Chapter~\chapterref{#1}}
 \newcommand{\Section}[1]{Section~\sectionref{#1}}
 \newcommand{\Sections}[1]{Sections~#1}
-\newcommand{\Figure}[1]{Fig.~\figureref{#1}}
+\newcommand{\Figure}[1]{Figure~\figureref{#1}}
 \newcommand{\Figures}[1]{Figures~#1}
 \newcommand{\Listing}[1]{Listing~\listingref{#1}}
 \newcommand{\Listings}[1]{Listings~#1}
