xcolor not color

--- a/decl-your-lang/commands/main.tex
+++ b/decl-your-lang/commands/main.tex
@@ -11,7 +11,7 @@
 % \usepackage{wrapfig}
 %\usepackage{url}
 % \usepackage{multirow}
-\usepackage{color}
+\usepackage{xcolor}
 % \usepackage{tabularx}  
 % \usepackage{booktabs}
 % \usepackage{framed}
