ELAN and Stratego/XT references

--- a/decl-your-lang/bibliography.bib
+++ b/decl-your-lang/bibliography.bib
@@ -400,6 +400,20 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   publisher = {Tech. Rep. 126--1994, Dipartimento di Scienze dell'Informazione, Universit\`a di Milano},
 }
 
+@article{BorovanskyKKMV96,
+  title = {ELAN: A logical framework based on computational systems},
+  author = {Peter Borovanský and Claude Kirchner and Hélène Kirchner and Pierre-Etienne Moreau and Marian Vittek},
+  year = {1996},
+  doi = {http://www.elsevier.com/gej-ng/31/29/23/29/23/show/Products/notes/index.htt#004},
+  tags = {rule-based},
+  researchr = {http://researchr.org/publication/BorovanskyKKMV96},
+  cites = {0},
+  citedby = {0},
+  journal = {Electronic Notes in Theoretical Computer Science},
+  volume = {4},
+  pages = {35-50},
+}
+
 @phdthesis{Vis97.thesis,
   title = {Syntax Definition for Language Prototyping},
   author = {Eelco Visser},
@@ -461,6 +475,15 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   isbn = {0-7695-2292-0},
 }
 
+@manual{StrategoXTReferenceManual,
+  title = {Stratego/XT Reference Manual},
+  author = {Martin  Bravenboer and Karl Trygve Kalleberg and Rob Vermaas and Eelco Visser},
+  year = {2003-2008},
+  researchr = {http://researchr.org/publication/StrategoXTReferenceManual},
+  cites = {0},
+  citedby = {0},
+}
+
 @article{BravenboerKVV08,
   title = {{Stratego/XT 0.17}. {A} language and toolset for program transformation},
   author = {Martin  Bravenboer and Karl Trygve Kalleberg and Rob Vermaas and Eelco Visser},
@@ -476,6 +499,24 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   pages = {52-70},
 }
 
+@inproceedings{Visser01,
+  title = {Stratego: A Language for Program Transformation Based on Rewriting Strategies},
+  author = {Eelco Visser},
+  year = {2001},
+  doi = {http://link.springer.de/link/service/series/0558/bibs/2051/20510357.htm},
+  tags = {control systems, programming languages, optimization, object-oriented programming, rule-based, transformation engineering, pattern language, generic programming, graph transformation, Stratego/XT, traversal, refactoring, language engineering, transformation language, software language engineering, term rewriting, reuse, termination, graph-rewriting, software engineering, rules, programming paradigms, migration, transformation system, rule-based refactoring, compiler, subject-oriented programming, program optimization, higher-order transformations, rewriting, rewriting strategies, feature-oriented programming, transformation, Stratego, program transformation, domain-specific language},
+  researchr = {http://researchr.org/publication/Visser01},
+  cites = {0},
+  citedby = {1},
+  pages = {357-362},
+  booktitle = {Rewriting Techniques and Applications, 12th International Conference, RTA 2001, Utrecht, The Netherlands, May 22-24, 2001, Proceedings},
+  editor = {Aart Middeldorp},
+  volume = {2051},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {3-540-42117-3},
+}
+
 @book{Krishnamurthi2014,
   title = {Programming and Programming Languages},
   author = {Shriram Krishnamurthi},
@@ -483,6 +524,7 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   researchr = {http://researchr.org/publication/Krishnamurthi2014},
   cites = {0},
   citedby = {0},
+  organization = {Brown University},
 }
 
 @inproceedings{KatsVV11,
@@ -739,6 +781,19 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   editor = {Cristina Videira Lopes and Kathleen Fisher},
   publisher = {ACM},
   isbn = {978-1-4503-0940-0},
+}
+
+@article{BorovanskyKKMR98,
+  title = {An overview of ELAN},
+  author = {Peter Borovanský and Claude Kirchner and Hélène Kirchner and Pierre-Etienne Moreau and Christophe Ringeissen},
+  year = {1998},
+  doi = {http://www.elsevier.com/gej-ng/31/29/23/39/23/show/Products/notes/index.htt#022},
+  researchr = {http://researchr.org/publication/BorovanskyKKMR98},
+  cites = {0},
+  citedby = {0},
+  journal = {Electronic Notes in Theoretical Computer Science},
+  volume = {15},
+  pages = {55-70},
 }
 
 @techreport{Vis97.sglr,
